# xei

./: .gitignore  Cargo.toml  LICENSE  README.md  install.js  install.ps1  install.sh  package.json
.github/workflows/: release.yml
docs/: DAP-PLAN.md  GPU-PLAN.md  GPU_TERMINAL.md  POLISH-BACKLOG.md  ROADMAP.md
my-app/: package-lock.json
scripts/: release.sh
seisui/: Cargo.toml  sample.rs
seisui/src/: app.rs  buffer.rs  cursor.rs  editor.rs  main.rs  syntax.rs  theme.rs
seisui/src/ext/: api.rs  mod.rs
src/: app.rs  buffer.rs  config.rs  event.rs  explorer.rs  highlight.rs  lsp.rs  main.rs  syntax.rs  theme.rs  ui.rs  xlc.rs
src/gui/: editor.rs  mod.rs
suisei/: index.html  package-lock.json  package.json
suisei/frontend/: index.html
suisei/src/: App.svelte  Editor.svelte  Explorer.svelte  StatusBar.svelte  TabBar.svelte  Terminal.svelte  XlcPanel.svelte  main.js
suisei/src-tauri/: Cargo.toml  tauri.conf.json
suisei/src-tauri/src/: main.rs
xei/: .gitignore  Cargo.toml  README.md  install.js  install.ps1  install.sh  package.json
xei-core/: Cargo.toml
xei-core/src/: app.rs  bench.rs  buffer.rs  call_hierarchy.rs  clipboard.rs  completion.rs  config.rs  dap.rs  explorer.rs  fold.rs  gh.rs  git.rs  git_graph.rs  git_ops.rs  git_workbench.rs  highlight.rs  hooks.rs  lib.rs  lsp.rs  macros.rs  media.rs  multi_cursor.rs  nav.rs  ops.rs  palette.rs  peek.rs  pet.rs  pr_review.rs  preview.rs  rebase.rs  registers.rs  scm.rs  screensaver.rs  session.rs  settings.rs  snippets.rs  split.rs  substitute.rs  syntax.rs  term.rs  (+6 more)
xei/src/: event.rs  gfx.rs  gpu_frame.rs  kitty_gfx.rs  main.rs  metrics.rs  term_caps.rs  ui.rs
