[package]
name = "xei-editor"
version = "0.2.9"
edition = "2024"
description = "xei (晴) — a modern terminal text editor in Rust with Vim-modal editing, syntax highlighting, file explorer, built-in terminal, and theming"
license = "MIT"
repository = "https://github.com/stremtec/xei"
readme = "README.md"
keywords = ["editor", "vim", "tui", "terminal", "text-editor"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "xei"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
