[workspace]
resolver = "3"
members = ["xei-core", "xei", "suisei/src-tauri"]

# Single source of truth for the app version. Bump here (or via
# scripts/release.sh); xei-core and xei inherit with `version.workspace = true`.
# The install scripts resolve the version dynamically and are never bumped.
[workspace.package]
version = "3.0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
