[package]
name = "seisui"
version = "0.1.0"
edition = "2024"
description = "seisui (星推) — Rust-native GPU-accelerated extensible code editor"

[dependencies]
gpui = "0.2"
ropey = "1"
tree-sitter = "0.24"
tree-sitter-rust = "0.24"
wasmtime = "28"
cosmic-text = "0.12"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
