[package]
name = "xei-core"
version = "2.3.0"
edition = "2024"
description = "xei (晴) core library — headless editor engine shared by TUI and desktop frontends"
license = "MIT"
repository = "https://github.com/stremtec/xei"
keywords = ["editor", "vim", "core", "headless"]

[dependencies]
unicode-width = "0.2"
ratatui = "0.29"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
