[package]
name = "xei-core"
version = "3.0.8"
edition = "2024"
description = "xei (晴) core library — headless editor engine shared by TUI and desktop frontends"
license = "MIT"
repository = "https://github.com/stremtec/xei"
keywords = ["editor", "vim", "core", "headless"]

[dependencies]
unicode-width = "0.2"
ratatui = { version = "0.29", features = ["underline-color"] }
portable-pty = "0.8"
image = { version = "0.25", default-features = false, features = ["gif", "png", "jpeg", "webp", "bmp"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-go = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-json = "0.24"
streaming-iterator = "0.1"
serde_json = "1"
